<resources>
    <string name="app_name">SheeshApp</string>
    <string name="transition_string">uniqueStringTransition</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_time_tracker">TimeTrackerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_signup_question">Are you new?</string>
    <string name="welcome_signup_button">SignUp</string>
    <string name="welcome_login_button">LogIn</string>
    <string name="welcome_close_button">Close</string>
    <string name="welcome_login_question">Already have an account?</string>
    <string name="choose_friend_title">Choose friends</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="email_text">email</string>
    <string name="repeat_password_text">repeat password</string>
    <string name="save_login_text">Save login</string>
    <string name="cancel_text">cancel</string>
    <string name="submit_text">submit</string>
    <string name="press_play_text">Press play to start!</string>
    <string name="tracker_friends_title">Your friends</string>
    <string name="action_refresh_friends">Refresh</string>
    <string name="default_notification_channel_id">100</string>
    <string name="login_text">Login</string>
    <string name="edit">Edit</string>
    <string name="byDawidev">by Dawidev</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="no_friend_requests_text">No Friend Requests</string>
    <string name="friends_text">Friends</string>
    <string name="tracker">Tracker</string>
    <string name="history_text">History</string>
    <string name="join_discord_text">Join Discord</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="profile_image_text">Profile Image</string>
    <string name="edit_text">Edit</string>
    <string name="deleted_text">Deleted</string>
    <string name="error_text">Error</string>
    <string name="save_image_question">Save Image?</string>
    <string name="uploading_text">Uploading</string>
    <string name="please_wait_text">Please wait...</string>
    <string name="saved_uploaded_text"><![CDATA[Saved & Uploaded]]></string>
    <string name="error_save_picture">Error saving picture</string>
    <string name="save_and_upload">Save and Upload</string>
    <string name="open_gallery_text">Open Gallery</string>
    <string name="delete_text">Delete</string>
    <string name="friend_requests_formatted_text"><![CDATA[You have <i>%d</i> new Friend Requests]]></string>
    <string name="click_to_open">Click to open</string>
    <string name="friend_delete_formatted_text"><![CDATA[Do you really want to delete %s ?]]></string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="accepted_text">Accepted</string>
    <string name="denied_text">Denied</string>
    <string name="some_error_occured_text">Some error occurred</string>
    <string name="lets_sheesh_text">Let\'s Sheesh</string>
    <string name="add_friend_text">Add friend</string>
    <string name="plan_session_text">Plan Session</string>
    <string name="start_tracker_text">Start Tracker</string>
    <string name="starting_session_text">Starting Session</string>
    <string name="canceled_text">Canceled</string>
    <string name="leave_question">Do you want to leave?</string>
    <string name="sheeeesh_text">Sheeesh!</string>
    <string name="tracker_title">TRACKER</string>
    <string name="no_friends_selected_click_to_select">No friends selected! Click to select.</string>
    <string name="no_time_selected_click_to_select">No time selected! Click to select.</string>
    <string name="time_text">Time</string>
    <string name="location_text">Location</string>
    <string name="shishas_location_hint">Shishas Location..</string>
    <string name="comment_text">Comment</string>
    <string name="your_comment_hint">Your Comment..</string>
    <string name="your_time_text">Your Time:</string>
    <string name="choose_at_least_one_friend">Choose at least one friend!</string>
    <string name="choose_more_than_5_seconds">You chose less than 5 seconds!</string>
    <string name="no_saved_history">No saved histories</string>
    <string name="added_n_new_histories">Added %d new History entries</string>
    <string name="error_loading_history">Error loading History</string>
    <string name="duration_text">Duration</string>
    <string name="num_of_shishas_text">Number of Shishas</string>
    <string name="add_text">Add</string>
    <string name="search_friend_hint">Search friend</string>
    <string name="friend_without_sheeshapp_hint">Friend without SheeshApp</string>
    <string name="no_selected_friends_text">No friends selected</string>
    <string name="check_your_inout">Check your input</string>
    <string name="success">Success!</string>
    <string name="check_your_emails">Check your Emails</string>
    <string name="guest_text">Guest</string>
    <string name="coming_soon_text">Coming soon..</string>
    <string name="not_available_for_guest">Not available for guest!</string>
    <string name="no_friends_available">No friends available</string>
    <string name="cant_remove_all_friends_text">You can\'t remove all friends!</string>
    <string name="legal_text">Data protection</string>
    <string name="license_text">License</string>
    <string name="cant_be_your_own_friend">You can\'t be your own friend :(</string>
    <string name="guest_login_info_text">As guest, you have to watch a video to the end, to log in.</string>
    <string name="clsoed_ad_text">Closed ad</string>
    <string name="loading_ad_text">Loading ad..</string>
    <string name="failed_to_load_ad">Failed to load ad</string>
    <string name="open_profile_text">Open Profile</string>
    <string name="loading_text">Loading..</string>
    <string name="error_connecting_to_server">Error connecting to server</string>
    <string name="ok_text">OK</string>
    <string name="no_internet_connection">No Internet Connection!</string>
</resources>
