<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_menus">

    <TextView
        android:id="@+id/tvSigTitle"
        style="@style/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="@+id/imgSigLogo"
        app:layout_constraintStart_toEndOf="@+id/imgSigLogo"
        app:layout_constraintTop_toTopOf="@+id/imgSigLogo" />

    <Button
        android:id="@+id/btnSigWelcome"
        style="@style/btnStyleLongGray"
        android:layout_width="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:onClick="closeSignUp"
        android:text="@string/cancel_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/edTPasswordRepeat"
        app:layout_constraintTop_toBottomOf="@+id/cbSaveLogin" />

    <Button
        android:id="@+id/btnSigAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_roundrect_states"
        android:onClick="submitSignUp"
        android:text="@string/submit_text"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/edTPasswordRepeat"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/cbSaveLogin" />

        <EditText
            android:id="@+id/edTUsername"
            style="@style/etStyle"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/username_text"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/edTEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/edTEmail"
        style="@style/etStyle"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edTPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edTPassword"
        style="@style/etStyle"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edTPasswordRepeat"
        style="@style/etStyle"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/et_background"
        android:hint="@string/repeat_password_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <ImageView
        android:id="@+id/imgSigLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_menus" />

    <ImageButton
        android:id="@+id/imgBtnSigInfoUsername"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_info"
        android:onClick="showInfoUsername"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edTUsername"
        app:layout_constraintStart_toEndOf="@+id/edTUsername"
        app:layout_constraintTop_toTopOf="@+id/edTUsername" />

    <ImageButton
        android:id="@+id/imgBtnSigInfoEmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_info"
        android:onClick="showInfoEmail"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edTEmail"
        app:layout_constraintStart_toEndOf="@+id/edTEmail"
        app:layout_constraintTop_toTopOf="@+id/edTEmail" />

    <ImageButton
        android:id="@+id/imgBtnSigInfoPassword"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_info"
        android:onClick="showInfoPassword"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edTPassword"
        app:layout_constraintStart_toEndOf="@+id/edTPassword"
        app:layout_constraintTop_toTopOf="@+id/edTPassword" />

    <ImageButton
        android:id="@+id/imgBtnSigInfoPasswordRepeat"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_info"
        android:onClick="showInfoPasswordRepeat"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edTPasswordRepeat"
        app:layout_constraintStart_toEndOf="@+id/edTPasswordRepeat"
        app:layout_constraintTop_toTopOf="@+id/edTPasswordRepeat" />

    <CheckBox
        android:id="@+id/cbSaveLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/save_login_text"
        android:textColor="#FFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTPasswordRepeat" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>